# winbookBackend

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
authn/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
authn/helpers/: forgot_password.py
authn/migrations/: 0001_initial.py  0002_remove_user_website.py  0003_user_bio_user_cover_user_dp.py  0004_alter_user_bio.py  0005_alter_user_cover_alter_user_dp.py  0006_alter_user_dp.py  0007_alter_user_cover.py  0008_user_followers_user_following_user_private_account.py  0009_user_blocked_users.py  0010_alter_user_options.py  0011_alter_user_options_user_user_id.py
chat/: admin.py  consumers.py  models.py  serializers.py  signals.py  views.py
chat/migrations/: 0001_initial.py  0002_chat_is_group_alter_chat_dp_alter_chat_name.py  0002_remove_keyring_user_alter_message_options_and_more.py  0003_alter_message_options.py  0003_alter_message_options_remove_message_read_and_more.py
custom/: authentication.py  consumer.py  utils.py
nginx/: backend_http.conf  backend_https.conf
notifzz/: admin.py  apps.py  models.py  services.py  signals.py  views.py
notifzz/migrations/: 0001_initial.py  0002_remove_notification_user_notification_users.py  0003_alter_notification_post.py  0004_alter_notification_options.py
postapp/: admin.py  apps.py  models.py  serializer.py  signals.py  views.py
postapp/migrations/: 0001_initial.py  (+34 more)
socialBackend/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
