[tool.poetry]
name = "winbookbe"
version = "0.1.0"
description = ""
authors = ["D3M0N1K"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "22.8.0"
channels = "4.0.0"
channels-redis = "4.0.0"
daphne = "4.0.0"
django = "4.1"
django-cors-headers = "3.13.0"
django-push-notifications = "3.0.0"
django-redis = "5.2.0"
djangorestframework = "3.13.1"
mypy-extensions = "0.4.3"
pillow = "9.2.0"
psycopg2-binary = "2.9.5"
redis = "4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
